app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-deploy
  ports:
    - protocol: TCP
      port: 8888
